--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <header class="header">
       <img class="logo logo_place_header" src='./images/logo_place_header.svg' alt='Лого'>
       <h1 class='header__title'>Научиться учиться</h1>
-      
-      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link links'>Узнать &rarr;</a></p>
+      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link links' target="_blank">Узнать &rarr;</a></p>
       <img src='./images/header-image.png' alt="Главное изображение" class='header__main-illustration'>
       <div class='header__square-pic rotation'></div>
     </header>
@@ -83,7 +82,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class='feynman__subtitle'>Выучить и не забыть.</p>
-        <a class='feynman__link links' href="#">Подробнее &rarr;</a>
+        <a class='feynman__link links' href="#" target="_blank">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -136,7 +135,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class='khan__book-container'>
             <img class='khan__book-pic' alt='Книга' src="./images/khan-book.jpg">
-            <a class='khan__buy-link links' href="#">Купить книгу &rarr;</a>
+            <a class='khan__buy-link links' href="#" target="_blank">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -193,10 +192,10 @@
         <h2 class='section-title'>Полезные ресурсы</h2>
         <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
         <ul class='resources__logo-zone'>
-          <li><a class='links' href="#"><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-arzamas.svg"></a></li>
-          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-n1.svg"></a></li>
-          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-strelka.svg"></a></li>
-          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-polka.svg"></a></li>
+          <li><a class='links' href="#" target="_blank"><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-arzamas.svg"></a></li>
+          <li><a class='links' href='#' target="_blank"><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-n1.svg"></a></li>
+          <li><a class='links' href='#' target="_blank"><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-strelka.svg"></a></li>
+          <li><a class='links' href='#' target="_blank"><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-polka.svg"></a></li>
         </ul>
       </section>
 
@@ -210,17 +209,17 @@
         <nav class="footer__column footer__column_content_info">
           <h3 class='footer__column-heading'>О Практикуме</h3>
           <ul class='footer__column-links'>
-            <li><a class='footer__column-link links' href='#'>Главная</a></li>
-            <li><a class='footer__column-link links' href='#'>Концепция</a></li>
-            <li><a class='footer__column-link links' href='#'>Наставники</a></li>
+            <li><a class='footer__column-link links' href='#' target="_blank">Главная</a></li>
+            <li><a class='footer__column-link links' href='#' target="_blank">Концепция</a></li>
+            <li><a class='footer__column-link links' href='#' target="_blank">Наставники</a></li>
          </ul>
         </nav>
         <div class="footer__column footer__column_content_social">
           <h3 class='footer__column-heading'>Соцсети</h3>
           <ul class='footer__column-links'>
-            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Facebook' src="./images/facebook_color_white.svg">Facebook</a></li>
-            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Вконтакте' src="./images/vk_color_white.svg">Вконтакте</a></li>
-            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Instagram' src="./images/instagram_color_white.svg">Instagram</a></li>
+            <li><a class='footer__column-link links' href='#' target="_blank"><img class="footer__social-icon" alt='Социальная сеть Facebook' src="./images/facebook_color_white.svg">Facebook</a></li>
+            <li><a class='footer__column-link links' href='#' target="_blank"><img class="footer__social-icon" alt='Социальная сеть Вконтакте' src="./images/vk_color_white.svg">Вконтакте</a></li>
+            <li><a class='footer__column-link links' href='#' target="_blank"><img class="footer__social-icon" alt='Социальная сеть Instagram' src="./images/instagram_color_white.svg">Instagram</a></li>
           </ul>
         </div>
       </div>
